<?xml version="1.0"?>
<package format="2">
  <name>rto_simulation</name>
  <version>0.0.0</version>
  <description>The rto_simulation package</description>
  <maintainer email="robin.dietrich@tum.de"></maintainer>
  <author email="robin.dietrich@tum.de">Robin Dietrich</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rviz</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
